# DashForge-AI

./: .gitignore  CONTRATAÇÕES - DGT.pbip  README.md  deneb_test.json  pbir_research_and_learnings.md  projeto.pbip
CONTRATAÇÕES - DGT.Report/: .platform  definition.pbir
CONTRATAÇÕES - DGT.Report/definition/: report.json
CONTRATAÇÕES - DGT.SemanticModel/: .platform  diagramLayout.json
CONTRATAÇÕES - DGT.SemanticModel/definition/: expressions.tmdl  model.tmdl  relationships.tmdl
ESTRATÉGICO - PROJETOS/: ESTRATÉGICO - PROJETOS.pbip
ESTRATÉGICO - PROJETOS/ESTRATÉGICO - PROJETOS.Report/: .platform  definition.pbir
ESTRATÉGICO - PROJETOS/ESTRATÉGICO - PROJETOS.SemanticModel/: .platform  diagramLayout.json
Elos Minuta - Controle de Fiscalização/: Elos Minuta - Controle de Fiscalização.pbip
Estudos/: agent_Test.py
Estudos/ProjetoTeste/: ProjetoTeste.pbip
MeuProjeto/: MeuProjeto.pbip
Projeto para aprendizado/: Governança BI (1).pbip
Relatório Pagamentos/: Relatório Pagamentos.pbip
dados_mockup/: .csv  vendas.pbip  vendas.xlsx  vendas2.pbip
dados_mockup/vendas.Report/: .platform  (+1 more)
dashforge-ai/: .env.example  .gitignore  pyproject.toml
dashforge-ai/src/: config.py
dashforge-ai/src/models/: project_spec.py
dashforge-ai/src/tools/: generator.py
dashforge-ai/tests/: test_project_spec.py
docs/: Estrutura HTML.CSS do Dashboard.html  agno_vs_crewai.md  html_animations_showcase.html  html_card_showcase.html  implementation_plan.md  pbir_research_and_learnings.md  task_checklist.md
projeto.Report/: definition.pbir
projeto.SemanticModel/: .platform
(+774 files in other folders)
